--- a/nest-test/Dockerfile
+++ b/nest-test/Dockerfile
@@ -1,22 +1,21 @@
 # build stage
-FROM node:18 as build-stage
+FROM node:18-alpine as build-stage
 
 WORKDIR /app
 
 COPY package.json .
 
-RUN npm config set registry https://registry.npmmirror.com/
-
-RUN npm install
+RUN npm config set registry https://registry.npmmirror.com/ && \
+    npm install
 
 COPY . .
 
 RUN npm run build
 
 # production stage
-FROM node:18 as production-stage
+FROM node:18-alpine as production-stage
 
-COPY --from=build-stage /app/dist /app
+COPY --from=build-stage /app/dist /app/dist
 COPY --from=build-stage /app/package.json /app/package.json
 
 WORKDIR /app
@@ -25,6 +24,8 @@ RUN npm install --production
 
 RUN npm install pm2 -g
 
+COPY ecosystem.config.js .
+
 EXPOSE 3000
 
-CMD ["pm2-runtime", "/app/main.js"]
+CMD ["pm2-runtime", "ecosystem.config.js"]
